data/derived/comb/progs/unify/prog2577.ml.out
Characters 88-92:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a * 'b -> 'a * 'b
       but an expression was expected of type 'a * 'b -> 'b
       The type variable 'b occurs inside 'a * 'b
